# snakemake-storage-plugin-xrootd

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  environment.yml  pyproject.toml
.github/workflows/: ci.yml  distributions.yml  release-please.yml
docs/: further.md  intro.md
snakemake_storage_plugin_xrootd/: __init__.py
tests/: test_decorators.py  tests.py
