[build-system]
requires = [ "poetry-core",]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "snakemake-storage-plugin-xrootd"
version = "0.1.2"
description = "A Snakemake storage plugin for xrootd storage"
authors = [
    "Chris Burr <christopher.burr@cern.ch>",
    "Johannes Koester <johannes.koester@uni-due.de>"
]
readme = "README.md"
repository = "https://github.com/snakemake/snakemake-storage-plugin-xrootd"
documentation = "https://snakemake.github.io/snakemake-plugin-catalog/plugins/storage/xrootd.html"

[tool.poetry.dependencies]
python = "^3.11"
snakemake-interface-common = "^1.15.0"
snakemake-interface-storage-plugins = "^3.2.4"
xrootd = "^5.6.4"

[tool.poetry.group.dev.dependencies]
black = "^23.12.0"
flake8 = "^6.1.0"
coverage = "^7.3.2"
pytest = "^7.4.3"
snakemake = "^8.18.0"
